# XMiLib

./: .gitignore  CMakeLists.txt  DebugLogEntry.cpp  DebugLogEntry.h  Doxyfile  Exception.cpp  Exception.h  FileUtils.cpp  FileUtils.h  LICENSE.md  README.md  RandomNumberGenerator.cpp  RandomNumberGenerator.h  StringUtils.cpp  StringUtils.h  StyleSheetEditor.cpp  StyleSheetEditor.h  StyleSheetEditor.md  StyleSheetEditor.ui  SystemUtils.cpp  SystemUtils.h  XMiLib.sln  XMiLib.vcxproj  XMiLib.vcxproj.filters  XMiLibSolution.pro  stdafx.cpp  stdafx.h
DebugLog/: DebugLog.cpp  DebugLog.h  DebugLogEntry.cpp  DebugLogEntry.h  DebugLogFilterProxyModel.cpp  DebugLogFilterProxyModel.h  DebugLogWindow.cpp  DebugLogWindow.h  DebugLogWindow.ui
GlobalShortcut/: GlobalShortcut.cpp  GlobalShortcut.h  GlobalShortcutManager.cpp  GlobalShortcutManager.h
Scripts/PowerShell/: Utils.ps1
StyleSheetEditor/: StyleSheetEditor.cpp  StyleSheetEditor.h
Test/XMiLibGuiTest/: CMakeLists.txt  Constants.cpp  Constants.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OriginalStyleSheet.cpp  OriginalStyleSheet.h  XMiLibGuiTest.pri  XMiLibGuiTest.pro  XMiLibGuiTest.vcxproj  XMiLibGuiTest.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
Test/XMiLibTest/: CMakeLists.txt  CsvTest.cpp  DebugLogTest.cpp  ExceptionTest.cpp  FileUtilsTest.cpp  GlobalShortcutTest.cpp  RandomNumberGeneratorTest.cpp  ScopedClipboardAccess.cpp  ScopedGlobalMemoryLockTest.cpp  StringUtilsTest.cpp  ThreadedOperationTest.cpp  VersionNumberTest.cpp  XMiLibTest.cpp  XMiLibTest.h  XMiLibTest.pri  XMiLibTest.pro  XMiLibTest.vcxproj  XMiLibTest.vcxproj.filters  stdafx.cpp  stdafx.h
TestApps/DebugLogTest/: DebugLogTest.vcxproj  DebugLogTest.vcxproj.filters  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  stdafx.h
TestApps/StyleSheetEditorTest/: Constants.cpp  Constants.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  StyleSheetEditorTest.vcxproj  StyleSheetEditorTest.vcxproj.filters  main.cpp  stdafx.cpp
TestApps/XMiLibGuiTest/: Constants.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  OriginalStyleSheet.cpp  OriginalStyleSheet.h  XMiLibGuiTest.vcxproj  XMiLibGuiTest.vcxproj.filters  main.cpp  stdafx.h
TestApps/XMiLibTest/: DebugLogTest.cpp  Doxyfile  ExceptionTest.cpp  FileUtilsTest.cpp  GlobalShortcutTest.cpp  RandomNumberGeneratorTest.cpp  StringUtilsTest.cpp  ThreadedOperationTest.cpp  ThreadedOperationText.cpp  XMiLibTest.cpp  XMiLibTest.h  XMiLibTest.vcxproj  XMiLibTest.vcxproj.filters  stdafx.h
ThreadedOperation/: ThreadedOperation.cpp  ThreadedOperation.h  ThreadedOperationDialog.cpp  ThreadedOperationDialog.h  ThreadedOperationDialog.ui
Translations/: xmilib_fr.ts
XMiLib/: CMakeLists.txt  Doxyfile  Exception.cpp  Exception.h  FileUtils.cpp  FileUtils.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  SingleInstanceApp.cpp  SingleInstanceApp.h  StringUtils.cpp  StringUtils.h  SystemUtils.cpp  SystemUtils.h  XMiLib.pri  XMiLib.pro  XMiLib.vcxproj  XMiLib.vcxproj.filters  XMiLibConstants.cpp  XMiLibConstants.h  stdafx.cpp  stdafx.h  va_stdafx.h  xmilib_nl.ts  xmilib_pt.ts
XMiLib/DebugLog/: DebugLog.cpp  DebugLog.h  DebugLogEntry.cpp  DebugLogEntry.h  DebugLogFilterProxyModel.cpp  DebugLogFilterProxyModel.h  DebugLogWindow.cpp  DebugLogWindow.h  DebugLogWindow.ui
XMiLib/File/: CsvIO.cpp  CsvIO.h  FileUtils.cpp  FileUtils.h
XMiLib/GlobalShortcut/: GlobalShortcut.cpp  GlobalShortcut.h  GlobalShortcutManager.cpp  GlobalShortcutManager.h
XMiLib/Scoped/: ScopedClipboardAccess.cpp  ScopedClipboardAccess.h  ScopedGlobalMemoryLock.cpp  ScopedGlobalMemoryLock.h
XMiLib/String/: StringListEditorDialog.cpp  StringListEditorDialog.h  StringListEditorDialog.ui  StringListEditorModel.cpp  StringListEditorModel.h  StringUtils.cpp  StringUtils.h
XMiLib/StyleSheetEditor/: StyleSheetEditor.cpp  StyleSheetEditor.h  StyleSheetEditor.ui
XMiLib/ThreadedOperation/: ThreadedOperation.cpp  ThreadedOperation.h  ThreadedOperationDialog.cpp  ThreadedOperationDialog.h  ThreadedOperationDialog.ui
XMiLib/Translations/: xmilib_de.ts  xmilib_de_DE.ts  xmilib_es.ts  xmilib_es_ES.ts  xmilib_fr.ts  xmilib_fr_FR.ts  xmilib_hu_HU.ts  xmilib_it.ts  xmilib_it_IT.ts  xmilib_nl.ts  xmilib_nl_NL.ts  xmilib_pl.ts  xmilib_pl_PL.ts  xmilib_pt.ts  xmilib_pt_PT.ts  xmilib_ru.ts  xmilib_ru_RU.ts  xmilib_zh.ts  xmilib_zh_CN.ts  xmilib_zh_TW.ts
XMiLib/VersionNumber/: VersionNumber.cpp  VersionNumber.h
XMiLibTest/: ExceptionTest.cpp  ExceptionTest.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  RandomNumberGeneratorTest.cpp  StringUtilsTest.cpp  StringUtilsTest.h  XMiLibTest.cpp  XMiLibTest.h  XMiLibTest.vcxproj  XMiLibTest.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
